--- a/Web.Client/buildspec.yml
+++ b/Web.Client/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - cd Web.Client
+      - cd Web.Client/client
       - echo Installing source NPM dependencies...
       - npm install
   build:
