--- a/Web.Client/buildspec.yml
+++ b/Web.Client/buildspec.yml
@@ -9,3 +9,7 @@ phases:
     commands:
       - echo Build started on `date`
       - npm run build
+artifacts:
+  files:
+    - '**/*'
+  base-directory: 'build*'
