--- a/Web.Client/buildspec.yml
+++ b/Web.Client/buildspec.yml
@@ -9,7 +9,8 @@ phases:
     commands:
       - echo Build started on `date`
       - npm run build
+      - ls
 artifacts:
   files:
     - '**/*'
-  base-directory: 'build*'
+  base-directory: 'build'
