Cleared compiler warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 3.10.2)
 project(CalcEngine)
 add_subdirectory(CalcEngine)
 add_subdirectory(CalcEngine.Console)
-add_subdirectory(CalcEngine.Lambda)
+# add_subdirectory(CalcEngine.Lambda)
