--- a/CalcEngine.Tests/CalcEngine.Tests.vcxproj.filters
+++ b/CalcEngine.Tests/CalcEngine.Tests.vcxproj.filters
@@ -20,5 +20,8 @@
     <None Include="Basic1.json">
       <Filter>TestFiles</Filter>
     </None>
+    <None Include="EPDataTypes.csv" />
+    <None Include="EPValues.csv" />
+    <None Include="TestFile.json" />
   </ItemGroup>
 </Project>
