--- a/Web.Client/client/.env
+++ b/Web.Client/client/.env
@@ -1,1 +1,4 @@
 REACT_APP_URI=http://localhost:3000
+REACT_APP_WEBAPI_URI=http://localhost:5678
+REACT_APP_WEBAPI_CALCULATIONS_ENDPOINT=$REACT_APP_WEBAPI_URI/calculations
+REACT_APP_WEBAPI_CALCULATION_REQUEST_ENDPOINT=$REACT_APP_WEBAPI_URI/calculations/request
