--- a/Web.Client/client/package.json
+++ b/Web.Client/client/package.json
@@ -8,9 +8,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.38",
+    "@types/node": "^12.12.47",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
+    "fetch": "^1.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
