--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,30 +5,24 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
-            "type": "python",
+            "name": "Web.API",
+            "type": "node",
             "request": "launch",
-            "program": "${workspaceFolder}/Web.API/debug.py",
-            "console": "integratedTerminal"
+            "program": "${workspaceFolder}/Web.API/bin/www",
+            "cwd": "${workspaceFolder}/Web.API"
         },
         {
-            "name": ".NET Core Launch (console)",
+            "name": "ExcelParser - Console",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
+            "preLaunchTask": "build-ExcelParserConsole",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/ExcelParser/bin/Debug/netcoreapp2.1/ExcelParser.dll",
+            "program": "${workspaceFolder}/ExcelParser.Console/bin/Debug/net5.0/ExcelParser.Console.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/ExcelParser",
+            "cwd": "${workspaceFolder}/ExcelParser.Console",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
-        },
-        {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach",
-            "processId": "${command:pickProcess}"
         }
     ]
 }
